[FIX](task) 重新定义job语义逻辑
